--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
-    "mongoose": "^5.10.7"
+    "mongoose": "^5.10.7",
+    "morgan": "^1.10.0"
   }
 }
