--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.7",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "react-paypal-button-v2": "^2.6.2"
   }
 }
